--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-responsive-spritesheet": "^2.3.9",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "serialize-javascript": "^2.1.2",
+    "typescript": "^3.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
