--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.12.0",
     "react-responsive-spritesheet": "^2.3.9",
     "react-scripts": "3.3.0",
+    "react-transition-group": "^1.2.1",
     "serialize-javascript": "^2.1.2",
     "typescript": "^3.7.4"
   },
