--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.1",
+    "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-addons-update": "^15.6.2",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-responsive-spritesheet": "^2.3.9",
     "react-scripts": "3.3.0",
