--- a/package.json
+++ b/package.json
@@ -1,3 +1,6 @@
+
+// commented-out lines don't SEEM to impact app but I'm not quite ready to delete them yet
+
 {
   "name": "key_signature_kittens",
   "version": "0.1.0",
@@ -6,17 +9,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
-    "react-addons-update": "^15.6.2",
+    // "react-addons-update": "^15.6.2",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-responsive-spritesheet": "^2.3.9",
     "react-scripts": "3.3.0",
-    "react-transition-group": "^1.2.1",
-    "serialize-javascript": "^2.1.2",
-    "typescript": "^3.7.4"
+    // "typescript": "^3.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +40,6 @@
     ]
   },
   "devDependencies": {
-    "html-webpack-plugin": "^3.2.0"
+    // "html-webpack-plugin": "^3.2.0"
   }
 }
